[gd_scene load_steps=8 format=3 uid="uid://dps1bxun7u6ty"]

[ext_resource type="Script" uid="uid://bdh6ts3u6bqfh" path="res://Scripts/Systeme/game.gd" id="1_blsx5"]
[ext_resource type="Script" uid="uid://b5yjg6ep3t2pe" path="res://Scripts/Systeme/cursorSprite.gd" id="2_1kaen"]
[ext_resource type="Texture2D" uid="uid://r3ks2uu5w204" path="res://Assets/Sprites/UI/global_cursor.png" id="3_t2r3a"]

[sub_resource type="Animation" id="Animation_1kaen"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_t2r3a"]
resource_name = "fade_in"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_blsx5"]
resource_name = "fade_out"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e0tj7"]
_data = {
&"RESET": SubResource("Animation_1kaen"),
&"fade_in": SubResource("Animation_t2r3a"),
&"fade_out": SubResource("Animation_blsx5")
}

[node name="Game" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_blsx5")

[node name="MapRoot" type="Node2D" parent="."]
y_sort_enabled = true

[node name="PlayerRoot" type="Node2D" parent="."]
y_sort_enabled = true

[node name="FadeLayer" type="CanvasLayer" parent="."]

[node name="FadeRect" type="ColorRect" parent="FadeLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="FadeLayer"]
libraries = {
&"": SubResource("AnimationLibrary_e0tj7")
}

[node name="CursorLayer" type="CanvasLayer" parent="."]
script = ExtResource("2_1kaen")

[node name="CursorSprite" type="Sprite2D" parent="CursorLayer"]
scale = Vector2(2.5, 2.5)
texture = ExtResource("3_t2r3a")
